[package]
name = "china-dictatorship"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/cirosantilli/china-dictatorship"
license = "CC-BY-SA-4.0"
description = "反中共政治宣传库。Anti Chinese government propaganda. 住在中国真名用户的网友请别给星星，不然你要被警察请喝茶。常见问答集，新闻集和饭店和音乐建议。卐习万岁卐。冠状病毒审查郝海东新疆改造中心六四事件法轮功 996.ICU709大抓捕巴拿马文件邓家贵低端人口西藏骚乱。Friends who live in China and have real name on account, please don't star this repo, or else the police might pay you a visit. Home to the mega-FAQ, news compilation, restaurant and music recommen…"
include = [
    "**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.adoc",
]
readme = 'README.crates_io.md'
[dependencies]

